kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rims
  labels:
    name: rims
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rims-frontend
spec:
  selector:
    matchLabels:
      app: rims-frontend
  template:
    metadata:
      labels:
        app: rims-frontend
    spec:
      containers:
        - name: rims-frontend
          image: rims-frontend
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rims-frontend-svc
  namespace: rims
spec:
  selector:
    app: rims-frontend
  ports:
    - name: 80-tcp
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rims-frontend-ingress
  namespace: rims
spec:
  rules:
    - host: ${FRONTEND_FQDN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rims-frontend-svc
                port:
                  name: 80-tcp
  ingressClassName: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rims-api
spec:
  selector:
    matchLabels:
      app: rims-api
  template:
    metadata:
      labels:
        app: rims-api
    spec:
      containers:
        - name: rims-api
          image: rims-api
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rims-api-svc
  namespace: rims
spec:
  selector:
    app: rims-api
  ports:
    - name: 80-tcp
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rims-api-ingress
  namespace: rims
spec:
  rules:
    - host: ${API_FQDN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rims-api-svc
                port:
                  name: 80-tcp
  ingressClassName: nginx
